tests/errors/param-width.expect
---CODE---
1
---STDERR---
error: Port width mismatch
   ┌─ tests/errors/param-width.fil:5:16
   │
 5 │     a0 := A<G>(a, a);
   │                ^ Source `a' has width W
   │
   ┌─ ./primitives/core.fil:11:5
   │
11 │     @[G, L] left: WIDTH,
   │     ------------------- Destination `left' has width 32

